inclusao de parametros do arquivo config.json

--- a/files/agregateConfig.json
+++ b/files/agregateConfig.json
@@ -16,6 +16,19 @@
           ]
         }
       }
+    },
+    "carbon_facility.csv": {
+      "columns": {
+        "Carbon Equivalent:Facility [kg](Hourly) ": {
+          "values": [
+            "SUM/COUNT",
+            "COUNT",
+            "MIN",
+            "MAX",
+            "SUM"
+          ]
+        }
+      }
     }
   }
 }
